--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="src/assets/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="src/assets/favicon-32x32.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#470050"/>
     <title>Rythm Music - sua biblioteca de músicas</title>
